--- a/backend/package.json
+++ b/backend/package.json
@@ -1,13 +1,12 @@
 {
   "dependencies": {
-    "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "lodash": "^4.17.21",
-    "mongoose": "^7.4.1",
+    "lodash": "4.17.21",
+    "mongoose": "^7.5.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0"
